# rsync_python

./: .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
rsync_python/: __main__.py  simple_implementation.py
rsync_python/cli/: parse_args.py
rsync_python/configurations/: constants.py
rsync_python/core/: display_manager.py  transfer.py  transfer_manager.py
rsync_python/src/: display_manager.py  progress.py  shutdown_handler.py  transfer.py  transfer_manager.py
rsync_python/utils/: optimal_worker_count.py  progress.py  shutdown_handler.py  transfer_status.py
