[project]
name = "rsync_python"
version = "0.1"
description = "Pythonic tool for transfering files and directories, based on rsync, for Linux"
authors = [
    { name="Maor Grab", email="maor.grab@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["rsync", "python", "file", "directory", "transfer"]
license = "MIT"
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rsync_python"]

[project.scripts]
rsync_python = "rsync_python.__main__:main"

[project.urls]
"Homepage" = "https://github.com/MaorGrab/rsync_python"
"Repository" = "https://github.com/MaorGrab/rsync_python"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"